--- a/package.json
+++ b/package.json
@@ -9,11 +9,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@zkqh/c3d": "^0.1.0",
     "axios": "^1.3.4",
+    "element-china-area-data": "^6.1.0",
     "naive-ui": "^2.34.4",
     "vue": "^3.3.4",
-    "vue-router": "^4.1.6",
-    "@zkqh/c3d":"^0.1.0"
+    "vue-router": "^4.1.6"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.2.3",
